--- a/MenuFragment/app/src/main/res/values/strings.xml
+++ b/MenuFragment/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="dialog_fire_missiles">fire missiles</string>
+    <string name="cancel">cancel</string>
+    <string name="fire">fire</string>
 </resources>
