--- a/MenuFragment/app/src/main/res/values/strings.xml
+++ b/MenuFragment/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="Titel">Titel</string>
+    <string name="Beskrivning">Beskrivning</string>
+    <string name="VäljBild">Välj bild</string>
+    <string name="TaKort">Ta kort</string>
 </resources>
