--- a/MenuFragment/app/src/main/res/values/strings.xml
+++ b/MenuFragment/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Antons gitarrversktad</string>
+    <string name="app_name">Antons gitarrverkstad</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
